force-app/main/default/objects/Lead/fields/AVA__AVAAI_discovered_name__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_discovered_name__c</fullName>
    <description>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</description>
    <inlineHelpText>If a new first name is discovered in a Lead’s response, this field will be populated with the preferred first name.</inlineHelpText>
    <label>Conversica Discovered Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>