force-app/main/default/objects/Lead/fields/AVA__Campaign__c.field-meta.xml
<CustomField>
    <fullName>AVA__Campaign__c</fullName>
    <label>Deprecated Conversica Campaign</label>
    <length>200</length>
    <type>Text</type>
</CustomField>