force-app/main/default/objects/Lead/fields/Avg_Customer_Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Avg_Customer_Fleet_Size__c</fullName>
    <description>Used for Partner Qualification</description>
    <inlineHelpText>What is the average fleet size of your customer base?</inlineHelpText>
    <label>Avg. Customer Fleet Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>