force-app/main/default/objects/Lead/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <defaultValue>&quot;Fleet&quot;</defaultValue>
    <description>This field on the Lead object determines what record type a lead converts to (i.e. End_Customer or Industrial_Account).</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet</fullName>
                <default>true</default>
                <label>Fleet</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Machine Vision</fullName>
            </value>
            <value>
                <fullName>Connected Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>