force-app/main/default/objects/Lead/fields/CAE_Routing__c.field-meta.xml
<CustomField>
    <fullName>CAE_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field utilized for channel ae routing deals with channel payment method of Deal Registration Margin</inlineHelpText>
    <label>CAE Routing</label>
    <type>Checkbox</type>
</CustomField>