force-app/main/default/objects/Lead/fields/CAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CAM_Owner__c</fullName>
    <formula>Partner_Account_lr__r.Owner.FirstName &amp; &quot; &quot; &amp; Partner_Account_lr__r.Owner.LastName 
/*rvpe__RVAccount__r.rvpe__SFAccount__r.Owner.FirstName  &amp; &quot; &quot; &amp; rvpe__RVAccount__r.rvpe__SFAccount__r.Owner.LastName*/</formula>
    <label>CAM Owner</label>
    <type>Text</type>
</CustomField>