force-app/main/default/objects/Lead/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <label>Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Visited Booth</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>