force-app/main/default/objects/Lead/fields/Campaign_to_Add__c.field-meta.xml
<CustomField>
    <fullName>Campaign_to_Add__c</fullName>
    <description>Maps to the converted contact, then adds campaign member to contact based on the value of this field.</description>
    <label>Campaign to Add</label>
    <length>18</length>
    <type>Text</type>
</CustomField>