force-app/main/default/objects/Lead/fields/Channel_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Channel_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Channel Leads</relationshipLabel>
    <relationshipName>Channel_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>