force-app/main/default/objects/Lead/fields/Channel_Payment_Method_V2__c.field-meta.xml
<CustomField>
    <fullName>Channel_Payment_Method_V2__c</fullName>
    <formula>IF(
	OR(
	
		AND(
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Dynamic Fleet (Sales)&quot;),
			OR(
				CONTAINS( Fleet_Segment__c ,&quot;Commercial&quot;),
				AND(
					CONTAINS( Fleet_Segment__c , &quot;Enterprise&quot;),
Partner_Account_lr__r.Qualifies_for_Resale_in_Fleet_Enterprise__c = false
				)
			)
		),
		
		OR(
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Agile Fleet (Sales)&quot;),
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Industrial Referral (Sales)&quot;),
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Fleet Insurance Referral&quot;)
		)
	),

&quot;Rebate (% MSRP)&quot;,
	IF(
		OR(
			AND(
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Dynamic Fleet (Sales)&quot;),
				CONTAINS( Fleet_Segment__c ,&quot;Mid-Market&quot;)
			),
			AND(
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Dynamic Fleet (Sales)&quot;),
				CONTAINS( Fleet_Segment__c ,&quot;Enterprise&quot;),
Partner_Account_lr__r.Qualifies_for_Resale_in_Fleet_Enterprise__c = true
			),
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Industrial Reseller (Sales)&quot;),
			ISPICKVAL(Product_Interest_Type__c, &apos;Onsite Security Cameras&apos;)
		),
	&quot;Deal Registration Margin&quot;,
		IF(
			OR(
				AND( 
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Fleet Insight (Insurance)&quot;),
				NOT(ISPICKVAL(Product_Interest_Type__c, &apos;Onsite Security Cameras&apos;))
				),
				AND(
ISPICKVAL(Partner_Account_lr__r.Partner_Program_Tier__c, &quot;Fleet Control (Insurance)&quot;),
				NOT(ISPICKVAL(Product_Interest_Type__c, &apos;Onsite Security Cameras&apos;))
				)
			),
		&quot;End Customer Discount&quot;,
		&quot;None&quot;
		)
	)
)</formula>
    <label>Channel Payment Method</label>
    <type>Text</type>
</CustomField>