force-app/main/default/objects/Lead/fields/Channel_Source__c.field-meta.xml
<CustomField>
    <fullName>Channel_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Source</label>
    <type>Checkbox</type>
</CustomField>