force-app/main/default/objects/Lead/fields/Conversion_Error_Message_tal__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Error_Message_tal__c</fullName>
    <label>Conversion Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>