force-app/main/default/objects/Lead/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <formula>&quot;Convert&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Lead</label>
    <type>Text</type>
</CustomField>