force-app/main/default/objects/Lead/fields/Current_Solution_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution_Expiration_Date__c</fullName>
    <description>Expiration date on current contract with competitor</description>
    <label>Current Solution Expiration Date</label>
    <type>Date</type>
</CustomField>