force-app/main/default/objects/Lead/fields/Deal_Registration_Denied__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Registration Denied</label>
    <type>Checkbox</type>
</CustomField>