force-app/main/default/objects/Lead/fields/Description_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Conversion__c</fullName>
    <description>Description field that is updated via process builder when native Description is modified or Lead is new because native Description field won&apos;t transfer with conversion because why would it.</description>
    <label>Description for Conversion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>