force-app/main/default/objects/Lead/fields/Duplicate_Rules_Processed_Execute_Node__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Rules_Processed_Execute_Node__c</fullName>
    <description>Use this with Duplicate Rules Processed = TRUE for process builder node.</description>
    <formula>RecordTypeId != &quot;0121P0000006W06&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Rules Processed - Execute Node</label>
    <type>Checkbox</type>
</CustomField>