force-app/main/default/objects/Lead/fields/Email_Blog_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Blog_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email - Blog Opt In</label>
    <type>Checkbox</type>
</CustomField>