force-app/main/default/objects/Lead/fields/Employees_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Employees_on_Site__c</fullName>
    <description>Number of employees in the industrial facilities of the organization.</description>
    <label>Employees on Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>