force-app/main/default/objects/Lead/fields/Event_Lead__c.field-meta.xml
<CustomField>
    <fullName>Event_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Lead</label>
    <type>Checkbox</type>
</CustomField>