force-app/main/default/objects/Lead/fields/Experimental_Group_Routing__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Group_Routing__c</fullName>
    <inlineHelpText>This field is needed to by pass existing limitations on our Salesforce org for TOFU</inlineHelpText>
    <label>Experimental Group Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>