force-app/main/default/objects/Lead/fields/experimentId__c.field-meta.xml
<CustomField>
    <fullName>experimentId__c</fullName>
    <label>experimentId</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>