force-app/main/default/objects/Lead/fields/Fleet_Segment__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Segment__c</fullName>
    <formula>IF(
   OR(
      ISPICKVAL(Business_Unit__c, &apos;Fleet&apos;),
      ISPICKVAL(Business_Unit__c,&apos;Industrial&apos;)
   ),
   IF(
      OR(   
         ISPICKVAL(Organization_Size__c,&quot;1000 - 4999&quot;),
         ISPICKVAL(Organization_Size__c,&quot;5000+&quot;)
      ),
      &quot;Enterprise&quot;,
      IF(
         OR(
            Number_of_Assets__c &gt;= 41, 
            Number_of_Vehicles__c &gt;= 21
         ),
         &quot;Mid-Market&quot;,
         &quot;Commercial&quot;
      )
   ),
   &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Segment</label>
    <type>Text</type>
</CustomField>