force-app/main/default/objects/Lead/fields/Inbound_Form_Fleet_Range__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Form_Fleet_Range__c</fullName>
    <description>This is where the fleet range selection for the inbound forms gets stamped, allowing us to optimize our campaigns for certain fleet sizes.</description>
    <label>Inbound Form Fleet Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>