force-app/main/default/objects/Lead/fields/Inbound_Lead__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the assigned owner will get a slack message and an email upon conversion.</description>
    <label>Inbound Lead</label>
    <type>Checkbox</type>
</CustomField>