force-app/main/default/objects/Lead/fields/Industrial_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Square_Footage__c</fullName>
    <description>Size of the industrial facilities of the organization.</description>
    <label>Industrial Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>