force-app/main/default/objects/Lead/fields/Is_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal Registration</label>
    <type>Checkbox</type>
</CustomField>