force-app/main/default/objects/Lead/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <description>Last date/time a lead was called</description>
    <label>Last Call</label>
    <type>DateTime</type>
</CustomField>