force-app/main/default/objects/Lead/fields/Lead_Id_Copy__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_Copy__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id Copy</label>
    <type>Text</type>
</CustomField>