force-app/main/default/objects/Lead/fields/Lead_Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Transfer_Status__c</fullName>
    <label>Lead Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Requalify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>