force-app/main/default/objects/Lead/fields/Microsoft_MSCLIKID__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_MSCLIKID__c</fullName>
    <inlineHelpText>Used to track Bing click ads for Growth</inlineHelpText>
    <label>Microsoft MSCLIKID</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>