force-app/main/default/objects/Lead/fields/More_About_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>More_About_Opportunity__c</fullName>
    <label>More About Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>