force-app/main/default/objects/Lead/fields/Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assets__c</fullName>
    <description>Tracks the number of assets (unpowered and powered) owned and operated by the account</description>
    <label>Number of Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>