force-app/main/default/objects/Lead/fields/Number_of_customers_estimate__c.field-meta.xml
<CustomField>
    <fullName>Number_of_customers_estimate__c</fullName>
    <description>Used for Partner Qualification</description>
    <inlineHelpText>Please add the estimated number of customers you serve as a whole number.</inlineHelpText>
    <label>Number of customers (estimate)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>