force-app/main/default/objects/Lead/fields/Number_of_Dash_Cameras__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dash_Cameras__c</fullName>
    <label>Number of Dash Cameras</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>