force-app/main/default/objects/Lead/fields/Number_of_Site_Gateways__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Site_Gateways__c</fullName>
    <label>Number of Site Gateways</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>