force-app/main/default/objects/Lead/fields/Number_of_Trailers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trailers__c</fullName>
    <description>Number of trailers that the lead has.</description>
    <label>Number of Trailers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>