force-app/main/default/objects/Lead/fields/Organization_Size__c.field-meta.xml
<CustomField>
    <fullName>Organization_Size__c</fullName>
    <description>Number of employees or students</description>
    <inlineHelpText>Number of employees or students</inlineHelpText>
    <label>Organization Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 99</fullName>
                <default>true</default>
                <label>1 - 99</label>
            </value>
            <value>
                <fullName>100 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 999</fullName>
            </value>
            <value>
                <fullName>1000 - 4999</fullName>
            </value>
            <value>
                <fullName>5000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>