force-app/main/default/objects/Lead/fields/Partner_Program_Segment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Segment__c</fullName>
    <formula>TEXT(Partner_Account_lr__r.Partner_Program_Tier__c)
/*TEXT(rvpe__RVAccount__r.rvpe__SFAccount__r.Partner_Program_Tier__c)*/</formula>
    <label>Partner Program Segment</label>
    <type>Text</type>
</CustomField>