force-app/main/default/objects/Lead/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Team Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Partner Services</fullName>
            </value>
            <value>
                <fullName>MNO/FMC</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
                <isActive>false</isActive>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Ecosystem</fullName>
                <isActive>false</isActive>
                <label>Ecosystem</label>
            </value>
            <value>
                <fullName>Installer</fullName>
                <isActive>false</isActive>
                <label>Installer</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Resale</fullName>
                <isActive>false</isActive>
                <label>Resale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>