force-app/main/default/objects/Lead/fields/Primary_goal_in_partnering_with_Samsara__c.field-meta.xml
<CustomField>
    <fullName>Primary_goal_in_partnering_with_Samsara__c</fullName>
    <label>Primary goal in partnering with Samsara</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send customer referrals</fullName>
            </value>
            <value>
                <fullName>Install Samsara</fullName>
            </value>
            <value>
                <fullName>Build a technical integration</fullName>
            </value>
            <value>
                <fullName>Build an insurance program</fullName>
            </value>
            <value>
                <fullName>Need Guidance</fullName>
            </value>
            <value>
                <fullName>Selling into the Public Sector</fullName>
            </value>
            <value>
                <fullName>OEM: Factory Install, Upfitting, or API Integration</fullName>
            </value>
            <value>
                <fullName>Unsure, just exploring options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>