force-app/main/default/objects/Lead/fields/Product_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Type__c</fullName>
    <label>Product Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet/Industrial Deal</fullName>
            </value>
            <value>
                <fullName>Onsite Security Cameras</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Connected Sites</fullName>
                <isActive>false</isActive>
                <label>Connected Sites</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>