force-app/main/default/objects/Lead/fields/Public_Sector__c.field-meta.xml
<CustomField>
    <fullName>Public_Sector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Sector</label>
    <type>Checkbox</type>
</CustomField>