force-app/main/default/objects/Lead/fields/Quantcast_ID__c.field-meta.xml
<CustomField>
    <fullName>Quantcast_ID__c</fullName>
    <label>Quantcast ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>