force-app/main/default/objects/Lead/fields/Referring_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Referring_Partner_Name__c</fullName>
    <description>Name of partner rep who registers a lead</description>
    <label>Referring Partner Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>