force-app/main/default/objects/Lead/fields/RR_Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>RR_Duplicate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (RR Duplicate Account)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>