force-app/main/default/objects/Lead/fields/RR_Duplicate_Rules_Processed__c.field-meta.xml
<CustomField>
    <fullName>RR_Duplicate_Rules_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Rules Processed</label>
    <type>Checkbox</type>
</CustomField>