force-app/main/default/objects/Lead/fields/RR_Free_Mail_Domain__c.field-meta.xml
<CustomField>
    <fullName>RR_Free_Mail_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RR Free Mail Domain</label>
    <type>Checkbox</type>
</CustomField>