force-app/main/default/objects/Lead/fields/Samsara_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for GTMS-26098</description>
    <label>Samsara Recommendation</label>
    <type>Checkbox</type>
</CustomField>