force-app/main/default/objects/Lead/fields/ShowpadForSF__Showpad_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>ShowpadForSF__Showpad_Activity_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of Showpad Activities where this lead has been a part of.</description>
    <label>Showpad Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>