force-app/main/default/objects/Lead/fields/Sic_2__c.field-meta.xml
<CustomField>
    <fullName>Sic_2__c</fullName>
    <description>Alternative Sic Code for the lead.</description>
    <label>SIC Code 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>