force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Used for the lead field mapping process. Copies the lead source value into the Account &amp; Contact.</description>
    <formula>TEXT(LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>