force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>Used by growth for leads created by forms.</description>
    <label>utm campaign</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>